<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/interface_category_title"
        android:key="interface"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory
            android:title="@string/lockscreen_weather_title"
            android:key="lockscreen_weather">
        <com.polar.settings.preferences.SystemSettingSwitchPreference
                android:key="lockscreen_weather_enabled"
                android:title="@string/show_lockscreen_weather_title"
                android:summary="@string/show_lockscreen_weather_summary"
                android:defaultValue="false"/>
        <com.polar.settings.preferences.SystemSettingSwitchPreference
                android:key="lockscreen_weather_location"
                android:title="@string/lockscreen_weather_location_title"
                android:summary="@string/lockscreen_weather_location_summary"
                android:dependency="lockscreen_weather_enabled"
                android:defaultValue="false"
        />
        <!--<com.polar.settings.preferences.SystemSettingSwitchPreference
                android:key="lockscreen_weather_style"
                android:title="@string/lockscreen_weather_style_title"
                android:summary="@string/lockscreen_weather_style_summary"
                android:dependency="lockscreen_weather_enabled"
                android:defaultValue="false"
        />-->
        <ListPreference
                android:key="weather_icon_pack"
                android:title="@string/weather_icon_pack_title"
                android:persistent="false"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/lockscreen_category"
            android:key="lockscreen_category">
        <Preference
                android:key="udfps_settings"
                android:icon="@drawable/ic_fp_selector"
                android:title="@string/udfps_settings_title"
                android:summary="@string/udfps_settings_summary"
                android:fragment="com.polar.settings.fragments.ui.lockscreen.UdfpsSettings"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/additional_settings"
            android:key="interface_additional_settings">
        <com.polar.settings.preferences.SystemSettingSwitchPreference
                android:key="three_finger_gesture"
                android:title="@string/three_finger_gesture"
                android:summary="@string/three_finger_gesture_summary"
                android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
