<?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/polar_settings"
     android:key="polarsettings_fragment"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">  
   <Preference
       android:fragment="com.polar.settings.fragments.statusbar.StatusBar"
       android:key="statusbar_category"
       android:icon="@drawable/ic_statusbar"	   
       android:title="@string/statusbar_category_title" 
       android:summary="@string/statusbar_category_summary" />
   <Preference
       android:fragment="com.polar.settings.fragments.ui.UI"
       android:key="interface_category"
       android:icon="@drawable/ic_ui"
       android:title="@string/interface_category_title"
       android:summary="@string/interface_category_summary" />
   <PreferenceScreen
       android:title="@string/weather_config_title"
       android:icon="@drawable/ic_weather"
       android:summary="@string/weather_config_summary" >
       <intent android:action="android.intent.action.MAIN"
               android:targetPackage="org.omnirom.omnijaws"
               android:targetClass="org.omnirom.omnijaws.SettingsActivityService" />
    </PreferenceScreen>     
</PreferenceScreen>
