<?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/statusbar_category_title"
     android:key="statusbar"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">  
   <Preference
       android:fragment="com.polar.settings.fragments.statusbar.Traffic"
       android:key="traffic_fragment"
       android:title="@string/traffic_title" 
       android:summary="@string/traffic_summary" />
   <com.polar.settings.preferences.SystemSettingSwitchPreference
       android:key="show_fourg_icon"
       android:title="@string/show_4g_icon_title"
       android:summary="@string/show_4g_icon_summary"
       android:defaultValue="true"/>  
      <!-- OOS style material dismiss all button for notifications -->
   <com.sakura.settings.preferences.SystemSettingSwitchPreference
       android:key="notification_material_dismiss"
       android:title="@string/notification_material_dismiss_button_title"
       android:summary="@string/notification_material_dismiss_button_summary"
       android:defaultValue="true" />  
</PreferenceScreen>
